--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <title>Find Me Food</title>
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="/img/bread_1f35e.png" type="image/png">
     <style>
         .container.hidden {
             opacity: 0;
