--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="stylesheet" href="login.css">
+    <link rel="icon" href="/img/bread_1f35e.png" type="image/png">
 </head>
 
 <body>
