--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <title>Profile Page</title>
+    <link rel="icon" href="/img/bread_1f35e.png" type="image/png">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="stylesheet" href="profile.css">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
