--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <title>Signup</title>
+    <link rel="icon" href="/img/bread_1f35e.png" type="image/png">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="stylesheet" href="signup.css">
 </head>
